--- a/text-property.html
+++ b/text-property.html
@@ -14,5 +14,7 @@
   <h2 id="two">heading two</h2>
   <h3 id="three">heading three</h3>
   <p id="do">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores soluta perferendis maxime. Magnam ipsa ducimus voluptates natus iusto, tenetur distinctio excepturi adipisci cupiditate est deleniti harum voluptatibus minus dicta tempore!</p>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque autem itaque velit minima dignissimos culpa repudiandae esse ut impedit. Libero.</p>
 </body>
 </html>
